# samidare-lib

./: README.md  parameters.toml  pyproject.toml
docs/: 404.html  index.html
docs/examples/: mapfile_check.html
docs/examples/session/: hit_pattern_demo.py.json  how_to_use_demo.py.json
docs/samidare-lib/: index.html  search.js
docs/samidare-lib/samidare_lib/: analysis.html  core.html  util.html
docs/samidare-lib/samidare_lib/analysis/: hit_pattern.html
docs/samidare-lib/samidare_lib/core/: appender.html  decode_v0.html  decode_v1.html  decoder.html  event_builder.html  pixi_spark.html  prm_loader.html  pulse_finder.html  viewer.html
docs/samidare-lib/samidare_lib/util/: mapfile.html  padinfo.html  parquetinfo.html  savefig.html
docs/search/: search_index.json
notebook/: hit_pattern_demo.py  how_to_use_demo.py  mapfile_check.py
notebook/__marimo__/: hit_pattern_demo.html  how_to_use_demo.html  mapfile_check.html
notebook/__marimo__/session/: hit_pattern_demo.py.json  how_to_use_demo.py.json  mapfile_check.py.json
page/: mkdocs.yml
page/docs/: index.md
page/docs/examples/: how_to_use_demo.html
page/docs/examples/session/: how_to_use_demo.py.json  mapfile_check.py.json
src/samidare_lib/: __init__.py
src/samidare_lib/analysis/: __init__.py  hit_pattern.py  pyspark_function_generator.py  pyspark_hit_pattern.py  pyspark_noise_check.py  pyspark_pedestal_check.py  pyspark_pulse_check.py
src/samidare_lib/core/: __init__.py  appender.py  decode_v0.py  decode_v1.py  decoder.py  event_builder.py  pixi_spark.py  prm_loader.py  pulse_finder.py  viewer.py
src/samidare_lib/decoder/: binary_dumper_version3.py  pyspark_event_builder_version2.py  pyspark_pulse_finder.py
src/samidare_lib/develop/: binary_dumper_version3.py  check_parquet.py  chk_rawdata.py  chk_test.py  hit.py  pyspark_function_generator.py  pyspark_hit_pattern.py  pyspark_noise_check.py  pyspark_pedestal_check.py  pyspark_pulse_check.py  pyspark_pulse_finder.py
src/samidare_lib/develop/__marimo__/session/: hit.py.json
src/samidare_lib/junk/: build_dev.py  decode_dev.py  event_dev.py  pyspark_check_conector_map.py  pyspark_hit_pattern.py  test.py
src/samidare_lib/junk/__marimo__/session/: build_dev.py.json  decode_dev.py.json  event_dev.py.json
src/samidare_lib/util/: __init__.py  mapfile.py  padinfo.py  parquetinfo.py  savefig.py
