[project]
name = "samidare-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FumiHubCNS", email = "fendo@cns.s.u-tokyo.ac.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "awkward>=2.8.5",
    "awkward-pandas>=2023.8.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pyarrow>=21.0.0",
    "pyspark>=4.0.0",
    "click>=8.2.1",
    "toml>=0.10.2",
    "kaleido>=1.0.0",
    "pyqtgraph>=0.14.0",
    "pyqt5>=5.15.11",
    "json5>=0.12.1",
    "jupyterlab>=4.4.10",
    "jupyterlab-lsp>=5.2.0",
    "marimo>=0.17.6",
    "catm-lib @ git+https://github.com/FumiHubCNS/catm-lib.git",
    "marimo-lib @ git+https://github.com/FumiHubCNS/marimo-lib.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/samidare_lib"]
 
[tool.hatch.metadata]
allow-direct-references = true

[tool.marimo.runtime]
output_max_bytes = 100_000_000

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pdoc>=16.0.0",
    "taskipy>=1.14.1",
    "python-lsp-server[all]>=1.13.1",
]

[project.scripts]
decode = "samidare_lib.core.decoder:main"

[tool.taskipy.tasks]
mkdocs = """ mkdir -p page/docs/examples && rm -rf page/docs/examples/* && cp -R notebook/__marimo__/* page/docs/examples/ && mkdocs build -v -f page/mkdocs.yml"""
pdoc = """rm -rf docs/samidare-lib && pdoc samidare_lib.util samidare_lib.analysis samidare_lib.core --output-directory docs/samidare-lib --math --docformat google"""

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
samidare-lib = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.dependencies]
python = "3.13.*"
openjdk = "17.*"

[tool.pixi.tasks]
mkdocs = """
mkdir -p page/docs/examples &&
rm -rf page/docs/examples/* &&
cp -R notebook/__marimo__/* page/docs/examples/ &&
mkdocs build -v -f page/mkdocs.yml
"""
pdoc = "rm -rf docs/samidare-lib && pdoc samidare_lib.util samidare_lib.analysis samidare_lib.core --output-directory docs/samidare-lib --math --docformat google"